syntax = "proto2"; // 2.6.1

package vr; 
message Pose 
{ 
   required float     pos_x = 1;  // pos x
   required float     pos_y = 2;  // pos y
   required float     pos_z = 3;  // pos z
   required float     euler_x = 4;  // euler x
   required float     euler_y = 5;  // euler y
   required float     euler_z = 6;  // euler z
}
